# pg_otel

./: Cargo.toml  README.md  pg_otel.control
sql/: setup.sql
src/: config.rs  lib.rs  postgres.rs  span.rs  worker.rs
