[package]
name = "pg_otel"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[features]
default = ["pg19"]
pg13 = ["pgrx/pg13", "pgrx-tests/pg13" ]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14" ]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15" ]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16" ]
pg17 = ["pgrx/pg17", "pgrx-tests/pg17" ]
pg18 = ["pgrx/pg18", "pgrx-tests/pg18" ]
pg19 = ["pgrx/pg19", "pgrx-tests/pg19" ]
pg_test = []
pg_bench = ["dep:pgrx-bench"]

[dependencies]
heapless = "0.9.3"
libc = "0.2"
opentelemetry = { version = "0.32.0", default-features = false, features = ["tracing"] }
opentelemetry-otlp = { version = "0.32.0", default-features = false, features = ["trace", "http-proto", "grpc-tonic", "tls-ring"] }
opentelemetry_sdk = { version = "0.32.1", default-features = false, features = ["trace"] }
tonic = { version = "0.14.6", features = ["tls-ring"] }
pgrx = "=0.19.1"
tokio = { version = "1.52.3", features = ["rt"] }
fastrand = "2.4.1"

[dependencies.pgrx-bench]
version = "=0.19.1"
optional = true

[dev-dependencies]
[dev-dependencies.pgrx-tests]
version = "=0.19.1"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
